BUG: buttons not showing up properly in production. Adding custom style to see if that shows up.

--- a/app/globals.css
+++ b/app/globals.css
@@ -55,7 +55,7 @@
 
 :root {
   --background: #7eab98;
-  --foreground: #;
+  --foreground: #F8ECA8;
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
